experiments/15/c378f6e641f34bb9fd3582f9cb83ff686101dc/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[1722/2782] Copying clang's avx512vlvnniintrin.h...
[1723/2782] Copying clang's avxintrin.h...
[1724/2782] Copying clang's bmiintrin.h...
[1725/2782] Copying clang's bmi2intrin.h...
[1726/2782] Copying clang's __clang_cuda_builtin_vars.h...
[1727/2782] Copying clang's __clang_cuda_math.h...
[1728/2782] Copying clang's __clang_cuda_cmath.h...
[1729/2782] Copying clang's __clang_cuda_complex_builtins.h...
[1730/2782] Linking CXX static library lib/libLLVMX86Desc.a
[1731/2782] Copying clang's __clang_cuda_device_functions.h...
[1732/2782] Copying clang's __clang_cuda_intrinsics.h...
[1733/2782] Copying clang's __clang_cuda_libdevice_declares.h...
[1734/2782] Copying clang's __clang_cuda_math_forward_declares.h...
[1735/2782] Copying clang's __clang_hip_libdevice_declares.h...
[1736/2782] Copying clang's __clang_cuda_runtime_wrapper.h...
[1737/2782] Copying clang's __clang_hip_math.h...
[1738/2782] Linking CXX static library lib/libLLVMX86AsmParser.a
[1739/2782] Copying clang's __clang_hip_runtime_wrapper.h...
[1740/2782] Copying clang's cetintrin.h...
[1741/2782] Copying clang's cldemoteintrin.h...
[1742/2782] Copying clang's cet.h...
[1743/2782] Copying clang's clzerointrin.h...
[1744/2782] Copying clang's clflushoptintrin.h...
[1745/2782] Copying clang's cpuid.h...
[1746/2782] Copying clang's clwbintrin.h...
[1747/2782] Copying clang's emmintrin.h...
[1748/2782] Copying clang's enqcmdintrin.h...
[1749/2782] Copying clang's float.h...
[1750/2782] Copying clang's f16cintrin.h...
[1751/2782] Copying clang's fma4intrin.h...
[1752/2782] Copying clang's fmaintrin.h...
[1753/2782] Copying clang's gfniintrin.h...
[1754/2782] Copying clang's fxsrintrin.h...
[1755/2782] Linking CXX static library lib/libLLVMX86CodeGen.a
[1756/2782] Copying clang's htmxlintrin.h...
[1757/2782] Copying clang's immintrin.h...
[1758/2782] Copying clang's ia32intrin.h...
[1759/2782] Copying clang's htmintrin.h...
[1760/2782] Copying clang's intrin.h...
[1761/2782] Copying clang's inttypes.h...
[1762/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Analysis.cpp.o
[1763/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/BenchmarkResult.cpp.o
[1764/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Assembler.cpp.o
[1765/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/BenchmarkRunner.cpp.o
[1766/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Clustering.cpp.o
[1767/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Error.cpp.o
[1768/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/CodeTemplate.cpp.o
[1769/2782] Copying clang's s390intrin.h...
[1770/2782] Copying clang's shaintrin.h...
[1771/2782] Copying clang's smmintrin.h...
[1772/2782] Copying clang's stdalign.h...
[1773/2782] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/LatencyBenchmarkRunner.cpp.o
[1774/2782] Copying clang's stdarg.h...
[1775/2782] Copying clang's stdbool.h...
[1776/2782] Copying clang's stdatomic.h...
[1777/2782] Copying clang's stddef.h...
[1778/2782] Copying clang's __stddef_max_align_t.h...
[1779/2782] Copying clang's stdint.h...
[1780/2782] Copying clang's stdnoreturn.h...
[1781/2782] Copying clang's tbmintrin.h...
[1782/2782] Copying clang's tgmath.h...
[1783/2782] Copying clang's tmmintrin.h...
[1784/2782] Copying clang's tsxldtrkintrin.h...
[1785/2782] Copying clang's unwind.h...
[1786/2782] Copying clang's vadefs.h...
[1787/2782] Copying clang's vaesintrin.h...
[1788/2782] Copying clang's varargs.h...
[1789/2782] Copying clang's vecintrin.h...
[1790/2782] Copying clang's vpclmulqdqintrin.h...
[1791/2782] Copying clang's waitpkgintrin.h...
[1792/2782] Copying clang's wasm_simd128.h...
[1793/2782] Copying clang's wbnoinvdintrin.h...
[1794/2782] Copying clang's wmmintrin.h...
[1795/2782] Copying clang's __wmmintrin_aes.h...
[1796/2782] Copying clang's __wmmintrin_pclmul.h...
[1797/2782] Copying clang's x86intrin.h...
[1798/2782] Copying clang's xmmintrin.h...
[1799/2782] Copying clang's xopintrin.h...
[1800/2782] Copying clang's xsavecintrin.h...
[1801/2782] Copying clang's xsaveintrin.h...
[1802/2782] Copying clang's xsaveoptintrin.h...
[1803/2782] Copying clang's xsavesintrin.h...
[1804/2782] Copying clang's xtestintrin.h...
[1805/2782] Copying clang's cuda_wrappers/algorithm...
[1806/2782] Copying clang's cuda_wrappers/complex...
[1807/2782] Copying clang's cuda_wrappers/new...
[1808/2782] Copying clang's ppc_wrappers/mmintrin.h...
[1809/2782] Copying clang's ppc_wrappers/xmmintrin.h...
[1810/2782] Copying clang's ppc_wrappers/mm_malloc.h...
[1811/2782] Copying clang's ppc_wrappers/emmintrin.h...
[1812/2782] Copying clang's ppc_wrappers/pmmintrin.h...
[1813/2782] Copying clang's ppc_wrappers/tmmintrin.h...
[1814/2782] Copying clang's ppc_wrappers/smmintrin.h...
[1815/2782] Copying clang's openmp_wrappers/math.h...
[1816/2782] Copying clang's openmp_wrappers/cmath...
[1817/2782] Copying clang's openmp_wrappers/complex.h...
[1818/2782] Copying clang's openmp_wrappers/complex...
[1819/2782] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[1820/2782] Copying clang's openmp_wrappers/complex_cmath.h...
[1821/2782] Building arm_fp16.h...
[1822/2782] Copying clang's openmp_wrappers/new...
[1823/2782] Building arm_bf16.h...
[1824/2782] Copying clang's arm_fp16.h...
[1825/2782] Copying clang's arm_bf16.h...
[1826/2782] Building arm_cde.h...
[1827/2782] Copying clang's arm_cde.h...
[1828/2782] Building CXX object lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o
FAILED: lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Passes -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-redundant-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -MF lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o.d -o lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: In destructor ‘virtual llvm::IRChangePrinter::~IRChangePrinter()’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:341:46: error: no matching function for call to ‘llvm::IRChangePrinter::~IRChangePrinter()’
  341 |   ChangePrinter<std::string>::~ChangePrinter();
      |                                              ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note: candidate: ‘llvm::ChangePrinter<IRUnitT>::~ChangePrinter() [with IRUnitT = std::__cxx11::basic_string<char>]’
  334 | template <typename IRUnitT> ChangePrinter<IRUnitT>::~ChangePrinter<IRUnitT>() {
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note:   candidate expects 1 argument, 0 provided
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: At global scope:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:418:2: warning: extra ‘;’ [-Wpedantic]
  418 | };
      |  ^
[1829/2782] Linking CXX executable bin/llvm-ar
[1830/2782] Generating VCSVersion.inc
[1831/2782] Building arm_sve.h...
[1832/2782] Building arm_mve.h...
[1833/2782] Building arm_neon.h...
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
50.48user 5.54system 0:09.71elapsed 576%CPU (0avgtext+0avgdata 412352maxresident)k
0inputs+1063872outputs (43major+2257717minor)pagefaults 0swaps
